--- a/ui/view/page/vAbout.html.twig
+++ b/ui/view/page/vAbout.html.twig
@@ -58,7 +58,7 @@
                 </li>
                 <li class="marg-15-bottom">
                     <span class="txt-b">gestion des droits d'accès</span>
-                    <span class="msg-warning marg-15-top">mais pas de séparation entre ce qui provient du framework ou du minijournal ...A compléter. gestion des droits d'accès pour les images </span>
+                    <span class="msg-success marg-15-top">Fait </span>
                 </li>
                 <li class="marg-15-bottom">
                     <span class="txt-b">suppression d'un article en AJAX</span>
