--- a/ui/view/image/vAllImages.html.twig
+++ b/ui/view/image/vAllImages.html.twig
@@ -5,15 +5,18 @@
 {% block content %}
     <div class="row">
         <div class="cell-12">
-            <h1 class="align-center">Liste des images</h1>
+            <h1 class="align-center">Liste des images {{ endH1 }}</h1>
         </div>
     </div>
     <div class="row-col-s flex-vertical-center">
         {% if images|length > 0 %}
             {% for image in images %}
-                <a class="cell-3 c4-l c6-m color-yang padd-15 box-shad-2px align-center hvr-underline-from-center"
+                <a class="cell-3 c4-l c6-m padd-15 box-shad-2px align-center hvr-underline-from-center"
                    href="index.php?o=image&a=describe&id={{ image.id }}">
-                    <img class="responsive-img" src="{{ constant('DIR_IMAGE') ~ constant('DS') ~ image.path }}" alt="{{ image.attrAlt }}"/>
+                    <figure>
+                        <img class="responsive-img" src="{{ constant('DIR_IMAGE') ~ constant('DS') ~ image.path }}" alt="{{ image.attrAlt }}"/>
+                        <figcaption class="padd-15 padd-0-bottom">{{ image.attrAlt }}</figcaption>
+                    </figure>
                 </a>
             {% endfor %}
         {% else %}
