responsive menu and masonry js done

--- a/app/MagicMonkey/Framework/ui/layout/lUserConnection.html.twig
+++ b/app/MagicMonkey/Framework/ui/layout/lUserConnection.html.twig
@@ -14,13 +14,13 @@
 <div class="cell-12 hide show-s">
     <form class="form" method="post" action="{{ getCurrentUrl() }}">
         <div class="groupform-large hide">
-            <label class="required" for="loginConnection">Identifiant</label>
-            <input type="text" id="loginConnection" name="loginConnection" required
+            <label class="required color-yang" for="loginConnection">Identifiant</label>
+            <input class="padd-5" type="text" id="loginConnection" name="loginConnection" required
                    maxlength="25"/>
         </div>
         <div class="groupform-large">
-            <label class="required" for="passwordConnection">Mot de passe</label>
-            <input type="password" id="passwordConnection" name="passwordConnection" required/>
+            <label class="required color-yang" for="passwordConnection">Mot de passe</label>
+            <input class="padd-5" type="password" id="passwordConnection" name="passwordConnection" required/>
         </div>
         <div class="groupform-actions">
             <input type="submit" value="Valider" class="bg-midnight-blue color-yang border-none padd-10"/>
