--- a/ui/css/common.css
+++ b/ui/css/common.css
@@ -55,6 +55,12 @@
     font-family: "Caviar", serif;
 }
 
+.grid-item { width: 250px; }
+
+.grid{
+    margin:0 auto;
+}
+
 @media only screen and (max-width: 768px) {
     .jumbo {
         height: auto;
