--- a/ui/layout/lBase.html.twig
+++ b/ui/layout/lBase.html.twig
@@ -20,9 +20,12 @@
     <link rel="stylesheet" href="ui/css/libraries/hover.css" type="text/css">
     <link rel="stylesheet" href="ui/css/libraries/MagicMonkeyCSS.min.css" type="text/css">
     <link rel="stylesheet" href="ui/css/common.css" type="text/css">
+    <link rel="stylesheet" href="ui/css/modules/responsiveMenu.css" type="text/css">
     {% block css %}{% endblock %}
 
     <!-- JS-->
+    <script src="ui/js/libraries/jquery-3.2.0.min.js" type="text/javascript"></script>
+    <script src="ui/js/modules/responsiveMenu.js" type="text/javascript"></script>
     {% block js %}{% endblock %}
 </head>
 <body>
