--- a/ui/layout/lBase.html.twig
+++ b/ui/layout/lBase.html.twig
@@ -12,6 +12,7 @@
     <link rel="icon" type="image/x-icon" href="ui/media/favicon.png"/>
 
     {% block metaFB %}{% endblock %}
+    {% block metaTwitter %}{% endblock %}
 
     <title>{% block title %}{% endblock %} - Mini Framework</title>
 
