--- a/ui/view/page/vAbout.html.twig
+++ b/ui/view/page/vAbout.html.twig
@@ -70,7 +70,7 @@
                 </li>
                 <li class="marg-15-bottom">
                     <span class="txt-b">insertion des métadonnées dans les pages (Open Graph Protocol, Twitter Cards, Dublin Core et Microdata)</span>
-                    <span class="msg-error marg-15-top">Pas totalement</span>
+                    <span class="msg-success marg-15-top">Microdata dans les vues vOneArticle.html.twig et vOneImage.html.twig. Dublin Core dans le squelette soit lBase.html.twig .Twitter Cards et Open Graph Protocoal uniquement sur un article</span>
                 </li>
             </ul>
         </div>
