--- a/ui/view/image/vAllImages.html.twig
+++ b/ui/view/image/vAllImages.html.twig
@@ -4,6 +4,7 @@
 
 {% block js %}
     <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.js"></script>
+    <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.js"></script>
 {% endblock %}
 
 {% block content %}
@@ -44,6 +45,9 @@
                     easing: 'ease',
                     queue: false
                 }
+            });
+            $grid.imagesLoaded().progress( function() {
+                $grid.masonry('layout');
             });
         });
     </script>
