bye bye miniframework

--- a/ui/view/page/vAbout.html.twig
+++ b/ui/view/page/vAbout.html.twig
@@ -75,4 +75,14 @@
             </ul>
         </div>
     </div>
+    <div class="row">
+        <div class="cell-12">
+            <h2>Compléments</h2>
+            <ul class="txt-over-breakline">
+                <li class="marg-15-bottom">
+                    <span class="txt-b">Utilisation de <a class="color-peter-river" target="_blank" href="https://masonry.desandro.com/" title="Lien vers Masonry.js">masonry.js</a> pour afficher la liste des images</span>
+                </li>
+            </ul>
+        </div>
+    </div>
 {% endblock %}
